way to many media queries to avoid text jumping on load

--- a/src/styles/components/home.styl
+++ b/src/styles/components/home.styl
@@ -7,7 +7,6 @@
     margin-bottom: 20px
     padding-bottom: 20px
     max-width: 100%
-    overflow: hidden
     
     *
       max-width: 100%
